# file-thing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  builder.sh  conanfile.py  package.sh  test_package.sh
.github/workflows/: on-merge-action.yml  pull-request-action.yml
src/: main.cpp
src/cli/: commands.cpp  commands.h
src/ft/: file_thing.cpp  file_thing.h
unit_tests/: CMakeLists.txt  main.cpp  test_fixtures.h
